# BeanMind

./: .dockerignore  .env.example  .gitignore  DOCKER.md  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt  run_tests.sh  start.sh  stop.sh
backend/: main.py
design/: README.md  api_design.md  database_design.md  execution_plan.md  frontend_design.md  implementation_plan.md  module_design.md  system_architecture.md  task.md  walkthrough.md
docs/: docker-init.md  logging-setup.md
frontend/: DEVELOPMENT_SUMMARY.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
harness/: checks.json  policy.json
scripts/: __init__.py  benchmark_financial_reports.py  benchmark_ledger_projection.py  change_harness.py  generate_test_ledger.py  migrate_budget_operating_currency.py  migrate_monthly_budgets.py  migrate_single_machine.py  migrate_v3.py  sync_beancount.py  test_github_sync.py
tests/: README.md  conftest.py  test_account_api.py  test_account_application_service.py  test_account_entity.py  test_account_repository.py  test_account_repository_impl.py  test_account_service.py  test_ai_api.py  test_ai_application_service.py  test_ai_production_terms_guard.py  test_auth_api.py  test_auth_application_service.py  test_auth_service.py  test_beancount_service.py  test_budget_application_service.py  test_budget_entity.py  test_budget_execution.py  test_budget_execution_service.py  test_budget_item_entity.py  test_budget_repository_impl.py  test_config.py  test_cyclic_budget.py  test_database.py  (+19 more)
(+329 files in other folders)
